# yolov8-ultralitycs

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
yolov8-ultralitycs/: train.py
